welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: ';' expected but 'false' found.
  var green : Boolean false
                      ^